--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ html,
 body {
   height: 100%;
   font-family: "Titillium Web", sans-serif;
-  max-width: 800px;
+  max-width: 1100px;
   margin: auto;
 }
 
@@ -151,26 +151,9 @@ h5 {
 * {
   box-sizing: border-box;
 }
-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-nav div {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-nav {
-  flex-direction: row;
-}
-
-nav img.logo {
-  order: -1;
+nav a {
+  display: inline;
+  margin-right: 60px;
 }
 .intro {
   padding: 50px 10px;
@@ -201,7 +184,7 @@ nav img.logo {
 }
 
 .main {
-  /* width: 880px; */
+  width: 880px;
   margin: auto;
 }
 
@@ -222,11 +205,6 @@ nav img.logo {
   width: 48%;
   padding: 5px 0;
 }
-
-.middle-img {
-  max-width: 800px;
-}
-
 .main .services {
   display: inline-block;
   width: 32%;
@@ -241,66 +219,4 @@ nav img.logo {
   display: inline-block;
   width: 32%;
   padding: 5px 0;
-}
-hr {
-  margin: auto;
-  border-bottom: 1px solid black;
-}
-
-/*Responsive Styles*/
-@media screen and (max-width: 800px) {
-  /*general styles for tablet*/
-  body {
-    max-width: 550px;
-  }
-  nav img.logo {
-    order: -1;
-  }
-
-  nav {
-    flex-direction: column;
-  }
-  /*header*/
-  .getstarted {
-    margin: auto;
-    display: flex;
-    padding: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .imgcir {
-    display: none;
-  }
-  .middle-img {
-    max-width: 550px;
-  }
-}
-@media screen and (max-width: 500px) {
-  /*general styles for Mobile*/
-  body {
-    max-width: 320px;
-  }
-  nav img.logo {
-    order: -1;
-  }
-
-  nav {
-    flex-direction: column;
-  }
-  /*header*/
-  .getstarted {
-    margin: auto;
-    display: flex;
-    padding: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .imgcir {
-    display: none;
-  }
-  .middle-img {
-    max-width: 550px;
-  }
 }
