--- a/css/index.css
+++ b/css/index.css
@@ -1,306 +1,163 @@
+/* Use your own code or past solution for Great Idea Web Page CSS here! */
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
 }
 body {
-  line-height: 1;
+    line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
+ol, ul {
+    list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
+blockquote, q {
+    quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
-/* Set every element's box-sizing to border-box */
-html,
-body {
-  height: 100%;
-  font-family: "Titillium Web", sans-serif;
-  max-width: 800px;
-  margin: auto;
+html{
+    font-size:62.5%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Bangers", cursive;
-  letter-spacing: 1px;
-  margin-bottom: 15px;
+h2{
+    font-size:2rem;
+    font-weight: bold;
+    margin-top:10px;
 }
 
-/* Your code starts here! */
-* {
-  box-sizing: border-box;
-}
-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
+p{
+  
+    margin: 15px 5px 15px 0;
 }
 
-nav div {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
+
+a,p,span{
+    font-size:1.6rem;
 }
 
-nav {
-  flex-direction: row;
+*{
+    box-sizing: border-box;
 }
 
-nav img.logo {
-  order: -1;
-}
-.intro {
-  padding: 50px 10px;
+img{
+    width:100%;
+    height:auto;
 }
 
-.getstarted {
-  width: 50%;
-  display: inline-block;
-  padding: 30px;
+body{
+    max-width:880px;
+    width:100%;
+    margin:auto;
 }
 
-.getstarted h1 {
-  font-size: 80px;
-  text-align: center;
-  max-width: 50%;
-  margin-top: 10%;
-}
-.getstarted a {
-  border: 1px solid #dddddd;
-  margin: auto;
-}
-
-.getstarted .logo {
-  width: 50%;
-  display: inline-block;
-  padding: 20px;
-  margin: auto;
-}
-
-.main {
-  /* width: 880px; */
-  margin: auto;
-}
-
-.main h2 {
-  font-size: 20px;
-}
-.main p {
-  font-size: 15px;
-}
-
-.main .features {
-  display: inline-block;
-  width: 48%;
-  padding: 5px 0;
-}
-.main .about {
-  display: inline-block;
-  width: 48%;
-  padding: 5px 0;
-}
-
-.middle-img {
-  max-width: 800px;
-}
-
-.main .services {
-  display: inline-block;
-  width: 32%;
-  padding: 5px 0;
-}
-.main .product {
-  display: inline-block;
-  width: 32%;
-  padding: 5px 0;
-}
-.main .vision {
-  display: inline-block;
-  width: 32%;
-  padding: 5px 0;
-}
-hr {
-  margin: auto;
-  border-bottom: 1px solid black;
-}
-
-/*Responsive Styles*/
-@media screen and (max-width: 800px) {
-  /*general styles for tablet*/
-  body {
-    max-width: 550px;
-  }
-  nav img.logo {
-    order: -1;
-  }
-
-  nav {
-    flex-direction: column;
-  }
-  /*header*/
-  .getstarted {
-    margin: auto;
+header{
     display: flex;
-    padding: 0px;
+    justify-content: space-between;
+    margin:30px 0;
+}
+
+header nav{
+    display:flex;
+    width:70%;
+    justify-content:space-between;
+}
+
+header nav a{
+    text-decoration: none;
+    color:Gray;
+}
+
+header img{
+    max-width:20%;
+    min-width:175px;
+}
+
+section{
+    display:flex;
+}
+
+section.intro{
+    justify-content: space-between;
+    align-items:center;
+} 
+section.intro .intro-content{
+    display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-  }
-  .imgcir {
-    display: none;
-  }
-  .middle-img {
-    max-width: 550px;
-  }
+    width:50%;
 }
-@media screen and (max-width: 500px) {
-  /*general styles for Mobile*/
-  body {
-    max-width: 320px;
-  }
-  nav img.logo {
-    order: -1;
-  }
 
-  nav {
-    flex-direction: column;
-  }
-  /*header*/
-  .getstarted {
-    margin: auto;
+section.intro .intro-content button{
+  max-width:50%;
+  margin:auto;
+}
+
+
+section.intro .intro-content h1{
+    margin:auto;
+    font-size:4.5rem;
+    text-align: center;
+}
+
+section.intro img{
+    max-width:40%;
+}
+
+section.main{
+flex-direction: column;
+}
+
+section.main .first{
     display: flex;
-    padding: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .imgcir {
-    display: none;
-  }
-  .middle-img {
-    max-width: 550px;
-  }
+}
+
+section.main .first div{
+    padding-right:5px;
+}
+
+section.main .last{
+    display:flex;
+}
+
+section.main{
+    margin:30px 0;
+    padding-right:5px;
+}
+
+footer{
+    text-align:center;
 }
