--- a/css/index.css
+++ b/css/index.css
@@ -5,159 +5,293 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-    line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-    list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-    quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-html{
-    font-size:62.5%;
+html {
+  font-size: 62.5%;
 }
 
-h2{
-    font-size:2rem;
-    font-weight: bold;
-    margin-top:10px;
+h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
-p{
-  
-    margin: 15px 5px 15px 0;
+p {
+  margin: 15px 5px 15px 0;
 }
 
-
-a,p,span{
-    font-size:1.6rem;
+a,
+p,
+span {
+  font-size: 1.6rem;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-img{
-    width:100%;
-    height:auto;
+img {
+  width: 100%;
+  height: auto;
 }
 
-body{
-    max-width:880px;
-    width:100%;
-    margin:auto;
+body {
+  max-width: 880px;
+  width: 100%;
+  margin: auto;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    margin:30px 0;
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
 }
 
-header nav{
-    display:flex;
-    width:70%;
-    justify-content:space-between;
+header nav {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
 }
 
-header nav a{
-    text-decoration: none;
-    color:Gray;
+header nav a {
+  text-decoration: none;
+  color: Gray;
 }
 
-header img{
-    max-width:20%;
-    min-width:175px;
+header img {
+  max-width: 20%;
+  min-width: 175px;
 }
 
-section{
-    display:flex;
+section {
+  display: flex;
 }
 
-section.intro{
-    justify-content: space-between;
-    align-items:center;
-} 
-section.intro .intro-content{
-    display:flex;
+section.intro {
+  justify-content: space-between;
+  align-items: center;
+}
+section.intro .intro-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+}
+
+section.intro .intro-content button {
+  max-width: 50%;
+  margin: auto;
+}
+
+section.intro .intro-content h1 {
+  margin: auto;
+  font-size: 4.5rem;
+  text-align: center;
+}
+
+section.main .first, section.main .first{
+    flex-wrap:wrap;
+}
+
+section.intro img {
+  max-width: 40%;
+}
+
+section.main {
+  flex-direction: column;
+}
+
+section.main .first {
+  display: flex;
+}
+
+section.main .first div {
+  padding-right: 5px;
+}
+
+section.main .last {
+  display: flex;
+}
+
+section.main {
+  margin: 30px 0;
+  padding-right: 5px;
+}
+
+footer {
+  text-align: center;
+}
+
+@media screen and (max-width: 880px) {
+  body {
+    max-width: 96%;
+  }
+
+  header {
+    flex-direction: column-reverse;
+    align-content: center;
+    align-items: center;
+  }
+
+  header img {
+    width: 30%;
+    margin: 15px 0;
+  }
+
+  section.intro img {
+    display: none;
+  }
+
+  section.intro .intro-content {
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    width: 100%;
+  }
+
+  header nav {
     flex-direction: column;
-    justify-content: center;
-    width:50%;
-}
-
-section.intro .intro-content button{
-  max-width:50%;
-  margin:auto;
-}
-
-
-section.intro .intro-content h1{
-    margin:auto;
-    font-size:4.5rem;
+    width: 100%;
     text-align: center;
-}
+  }
 
-section.intro img{
-    max-width:40%;
-}
+  header nav a:first {
+    border-top: 2px solid grey;
+  }
 
-section.main{
-flex-direction: column;
-}
+  header nav a {
+    border-top: 2px solid grey;
+    padding: 15px;
+  }
 
-section.main .first{
-    display: flex;
-}
-
-section.main .first div{
-    padding-right:5px;
-}
-
-section.main .last{
-    display:flex;
-}
-
-section.main{
-    margin:30px 0;
-    padding-right:5px;
-}
-
-footer{
-    text-align:center;
+  section.intro .intro-content {
+    width: 100%;
+  }
 }
